[package]
name = "zico-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
reqwest = "0.12.2"
scraper = "0.19.0"
thiserror = "1.0.58"

[dev-dependencies]
tokio = { version= "1.37.0", features = ["macros"] }
