[package]
name = "zico-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures-util = { version = "0.3.30", features = [] }
pbr = "1.1.1"
reqwest = { version = "0.12.2", features = ["stream"] }
scraper = "0.19.0"
thiserror = "1.0.58"
tokio = { version= "1.37.0", features = ["fs", "macros"] }
